# keynote-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  README_zh.md  SECURITY.md  TECH.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start_server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  installation.md
examples/: basic_usage.py
src/: __init__.py  server.py
src/applescript/: content.applescript  export.applescript  keynote_base.applescript  presentation.applescript  slide.applescript
src/tools/: __init__.py  content.py  export.py  presentation.py  slide.py  unsplash.py
src/utils/: __init__.py  applescript_runner.py  error_handler.py
